--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.20.0"
+  },
+  "dependencies": {
+    "ethers": "^6.11.1"
   }
 }
