--- a/app/package.json
+++ b/app/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ethers": "^6.11.1",
+    "sweetalert": "^2.1.2",
+    "tailwindcss": "^3.4.1"
   }
 }
